--- a/Desafios/M03/012/estilo/style.css
+++ b/Desafios/M03/012/estilo/style.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 
 @import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
-
-root{
+:root{
     --fonte1: Verdana, Tahoma, sans-serif;
     --fonte2: 'Passion One';
-    --fonte3: 'Sriracha';
+    --fonte3: 'Sriracha', cursive;;
 }
 
 *{
@@ -27,10 +27,11 @@ header{
     text-align: center;
 }
 
-header h1{
+header>h1{
     padding: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header p{
@@ -53,6 +54,12 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
+}
+
+section > p{
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -63,12 +70,26 @@ section.normal {
 section.imagem{
     background-color: rgb(54, 54, 54);
     color: white;
-    
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.582);
+    background-attachment: fixed;
 }
 
 section.imagem p{
-    background-color: rgba(0, 0, 0, 0.144);
-    width: 400px;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.466);
+    text-overflow: 1px 1px 0px black;
+    
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-size: cover;
+
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-size: cover;
 }
 
 
