--- a/Exercícios/ex.026/mq001/estilo/tela.css
+++ b/Exercícios/ex.026/mq001/estilo/tela.css
@@ -13,3 +13,32 @@ html{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
 }
+
+header{
+    background-color: lightgray;
+}
+
+
+header > h1{
+    text-align: center;
+}
+
+menu li{
+    display: inline-block;
+    padding: 10px;
+    background-color: darkgray;
+    color: white;
+
+}
+
+menu ul {
+    list-style-type: none;
+    background-color: rgb(88, 42, 42);
+    
+}
+
+article{
+    width: 600px;
+    display: block;
+    margin: auto;
+}
