--- a/Exercícios/ex.026/mq001/estilos/impressora.css
+++ b/Exercícios/ex.026/mq001/estilos/impressora.css
@@ -12,3 +12,15 @@ html{
     font-size: 1.5em;
     line-height: 1.5en;
 }
+
+menu{
+    display: none;
+}
+
+article{
+    width: 100%;
+}
+
+article::after {
+    content: 'Esse artigo foi impresso através do site cursoemvideo.com';
+}
